--- a/SFMLResourceMapper/GUI/App.xaml
+++ b/SFMLResourceMapper/GUI/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="GUI.App"
+﻿<Application x:Class="RES.ResMap.GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GUI"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
